CSS fixed to work on mobile

--- a/video-speed-controller/style.css
+++ b/video-speed-controller/style.css
@@ -6,24 +6,27 @@ body {
   min-height: 100vh;
   background: #4C4C4C url('https://unsplash.it/1500/900?image=1021');
   background-size: cover;
-  font-family: sans-serif;
+  font-family: system-ui;
 }
 
 .wrapper {
-  width: 850px;
-  display: flex;
+  max-width: 850px;
+  display: grid;
+  grid-template-columns: 12fr 1fr;
+  grid-gap: 10px;
+  padding: 10px;
 }
 
 video {
   box-shadow: 0 0 1px 3px rgba(0,0,0,0.1);
+  width: 100%;
 }
 
 .speed {
+  width: min-content;
   background: #efefef;
-  flex: 1;
   display: flex;
   align-items: flex-start;
-  margin: 10px;
   border-radius: 50px;
   box-shadow: 0 0 1px 3px rgba(0,0,0,0.1);
   overflow: hidden;
